# hypr-configurator

./: Cargo.toml  README.md  hyprland-example.lua
src/: main.rs
