[package]
name = "hypr-configurator"
version = "0.1.0"
edition = "2021"
description = "A GTK4/libadwaita GUI configurator for Hyprland (Lua config format)"
license = "MIT"
repository = "https://github.com/DevN0t/hypr-configurator"
keywords = ["hyprland", "gtk4", "wayland", "configurator"]
categories = ["gui"]

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
